Partially revert "Update: Translations from eints"
This partially reverts b721787c7fafbff040fbcaa188a9d5dd7557e26f

Unremove string: STR_NETWORK_COMPANY_LIST_SPECTATE

--- a/src/lang/afrikaans.txt
+++ b/src/lang/afrikaans.txt
@@ -2043,6 +2043,7 @@ STR_NETWORK_NEED_COMPANY_PASSWORD_CAPTION                       :{WHITE}Maatskap
 
 # Network company list added strings
 STR_NETWORK_COMPANY_LIST_CLIENT_LIST                            :Klient Lys
+STR_NETWORK_COMPANY_LIST_SPECTATE                               :Toeskou
 
 # Network client list
 
