--- a/src/lang/belarusian.txt
+++ b/src/lang/belarusian.txt
@@ -2353,6 +2353,7 @@ STR_NETWORK_NEED_COMPANY_PASSWORD_CAPTION                       :{WHITE}Камп
 
 # Network company list added strings
 STR_NETWORK_COMPANY_LIST_CLIENT_LIST                            :Сьпіс кліентаў
+STR_NETWORK_COMPANY_LIST_SPECTATE                               :Назіраць
 
 # Network client list
 
