--- a/src/lang/estonian.txt
+++ b/src/lang/estonian.txt
@@ -2176,6 +2176,7 @@ STR_NETWORK_NEED_COMPANY_PASSWORD_CAPTION                       :{WHITE}Ettevõt
 
 # Network company list added strings
 STR_NETWORK_COMPANY_LIST_CLIENT_LIST                            :Klientide nimekiri
+STR_NETWORK_COMPANY_LIST_SPECTATE                               :Jälgi
 
 # Network client list
 
