--- a/src/lang/finnish.txt
+++ b/src/lang/finnish.txt
@@ -2128,6 +2128,7 @@ STR_NETWORK_NEED_COMPANY_PASSWORD_CAPTION                       :{WHITE}Yhtiö o
 
 # Network company list added strings
 STR_NETWORK_COMPANY_LIST_CLIENT_LIST                            :Kytkeytyneet pelaajat
+STR_NETWORK_COMPANY_LIST_SPECTATE                               :Katsele
 
 # Network client list
 STR_NETWORK_CLIENT_LIST_CAPTION                                 :{WHITE}Moninpeli
