--- a/src/lang/hebrew.txt
+++ b/src/lang/hebrew.txt
@@ -2023,6 +2023,7 @@ STR_NETWORK_NEED_COMPANY_PASSWORD_CAPTION                       :{WHITE}חברה
 
 # Network company list added strings
 STR_NETWORK_COMPANY_LIST_CLIENT_LIST                            :רשימת משתתפים
+STR_NETWORK_COMPANY_LIST_SPECTATE                               :צפה
 
 # Network client list
 
