--- a/src/lang/latin.txt
+++ b/src/lang/latin.txt
@@ -2216,6 +2216,7 @@ STR_NETWORK_NEED_COMPANY_PASSWORD_CAPTION                       :{WHITE}Societas
 
 # Network company list added strings
 STR_NETWORK_COMPANY_LIST_CLIENT_LIST                            :Index clientum
+STR_NETWORK_COMPANY_LIST_SPECTATE                               :Spectare
 
 # Network client list
 
