--- a/src/lang/serbian.txt
+++ b/src/lang/serbian.txt
@@ -2313,6 +2313,7 @@ STR_NETWORK_NEED_COMPANY_PASSWORD_CAPTION                       :{WHITE}PreduzeÄ
 
 # Network company list added strings
 STR_NETWORK_COMPANY_LIST_CLIENT_LIST                            :Spisak klijenata
+STR_NETWORK_COMPANY_LIST_SPECTATE                               :PraÄ‡enje
 
 # Network client list
 
