--- a/src/lang/slovak.txt
+++ b/src/lang/slovak.txt
@@ -2186,6 +2186,7 @@ STR_NETWORK_NEED_COMPANY_PASSWORD_CAPTION                       :{WHITE}Spoločn
 
 # Network company list added strings
 STR_NETWORK_COMPANY_LIST_CLIENT_LIST                            :Zoznam klientov
+STR_NETWORK_COMPANY_LIST_SPECTATE                               :Pozorovať
 
 # Network client list
 
