--- a/src/lang/ukrainian.txt
+++ b/src/lang/ukrainian.txt
@@ -2246,6 +2246,7 @@ STR_NETWORK_NEED_COMPANY_PASSWORD_CAPTION                       :{WHITE}Комп
 
 # Network company list added strings
 STR_NETWORK_COMPANY_LIST_CLIENT_LIST                            :Список клієнтів
+STR_NETWORK_COMPANY_LIST_SPECTATE                               :Спостерігати
 
 # Network client list
 
