--- a/src/lang/bulgarian.txt
+++ b/src/lang/bulgarian.txt
@@ -1960,6 +1960,7 @@ STR_NETWORK_NEED_COMPANY_PASSWORD_CAPTION                       :{WHITE}Комп
 
 # Network company list added strings
 STR_NETWORK_COMPANY_LIST_CLIENT_LIST                            :Списък с играчите
+STR_NETWORK_COMPANY_LIST_SPECTATE                               :Наблюдавай
 
 # Network client list
 
