--- a/src/lang/croatian.txt
+++ b/src/lang/croatian.txt
@@ -2148,6 +2148,7 @@ STR_NETWORK_NEED_COMPANY_PASSWORD_CAPTION                       :{WHITE}Tvrtka j
 
 # Network company list added strings
 STR_NETWORK_COMPANY_LIST_CLIENT_LIST                            :Popis klijenata
+STR_NETWORK_COMPANY_LIST_SPECTATE                               :Promatraj
 
 # Network client list
 
