--- a/src/lang/czech.txt
+++ b/src/lang/czech.txt
@@ -2463,6 +2463,7 @@ STR_NETWORK_NEED_COMPANY_PASSWORD_CAPTION                       :{WHITE}Společn
 
 # Network company list added strings
 STR_NETWORK_COMPANY_LIST_CLIENT_LIST                            :Seznam hráčů
+STR_NETWORK_COMPANY_LIST_SPECTATE                               :Pozorovat
 
 # Network client list
 
