--- a/src/lang/english_AU.txt
+++ b/src/lang/english_AU.txt
@@ -1998,6 +1998,7 @@ STR_NETWORK_NEED_COMPANY_PASSWORD_CAPTION                       :{WHITE}Company 
 
 # Network company list added strings
 STR_NETWORK_COMPANY_LIST_CLIENT_LIST                            :Client list
+STR_NETWORK_COMPANY_LIST_SPECTATE                               :Spectate
 
 # Network client list
 
