--- a/src/lang/faroese.txt
+++ b/src/lang/faroese.txt
@@ -1824,6 +1824,7 @@ STR_NETWORK_NEED_COMPANY_PASSWORD_CAPTION                       :{WHITE}Fyritøk
 
 # Network company list added strings
 STR_NETWORK_COMPANY_LIST_CLIENT_LIST                            :Listi yvir klientar
+STR_NETWORK_COMPANY_LIST_SPECTATE                               :Eygleið
 
 # Network client list
 
