--- a/src/lang/gaelic.txt
+++ b/src/lang/gaelic.txt
@@ -2209,6 +2209,7 @@ STR_NETWORK_NEED_COMPANY_PASSWORD_CAPTION                       :{WHITE}Tha a' c
 
 # Network company list added strings
 STR_NETWORK_COMPANY_LIST_CLIENT_LIST                            :Liosta nan cliant
+STR_NETWORK_COMPANY_LIST_SPECTATE                               :Coimhead air
 
 # Network client list
 
