--- a/src/lang/galician.txt
+++ b/src/lang/galician.txt
@@ -2045,6 +2045,7 @@ STR_NETWORK_NEED_COMPANY_PASSWORD_CAPTION                       :{WHITE}A compa√
 
 # Network company list added strings
 STR_NETWORK_COMPANY_LIST_CLIENT_LIST                            :Lista de clientes
+STR_NETWORK_COMPANY_LIST_SPECTATE                               :Observar
 
 # Network client list
 
