--- a/src/lang/icelandic.txt
+++ b/src/lang/icelandic.txt
@@ -1862,6 +1862,7 @@ STR_NETWORK_NEED_COMPANY_PASSWORD_CAPTION                       :{WHITE}Fyrirtæ
 
 # Network company list added strings
 STR_NETWORK_COMPANY_LIST_CLIENT_LIST                            :Listi yfir leikmenn
+STR_NETWORK_COMPANY_LIST_SPECTATE                               :Fylgjast með
 
 # Network client list
 
