--- a/src/lang/indonesian.txt
+++ b/src/lang/indonesian.txt
@@ -2100,6 +2100,7 @@ STR_NETWORK_NEED_COMPANY_PASSWORD_CAPTION                       :{WHITE}Perusaha
 
 # Network company list added strings
 STR_NETWORK_COMPANY_LIST_CLIENT_LIST                            :Daftar klien
+STR_NETWORK_COMPANY_LIST_SPECTATE                               :Menonton
 
 # Network client list
 
