--- a/src/lang/italian.txt
+++ b/src/lang/italian.txt
@@ -2138,6 +2138,7 @@ STR_NETWORK_NEED_COMPANY_PASSWORD_CAPTION                       :{WHITE}Compagni
 
 # Network company list added strings
 STR_NETWORK_COMPANY_LIST_CLIENT_LIST                            :Elenco dei client
+STR_NETWORK_COMPANY_LIST_SPECTATE                               :Diventa spettatore
 
 # Network client list
 
