--- a/src/lang/latvian.txt
+++ b/src/lang/latvian.txt
@@ -2093,6 +2093,7 @@ STR_NETWORK_NEED_COMPANY_PASSWORD_CAPTION                       :{WHITE}Uzņēmu
 
 # Network company list added strings
 STR_NETWORK_COMPANY_LIST_CLIENT_LIST                            :Spēlētāju saraksts
+STR_NETWORK_COMPANY_LIST_SPECTATE                               :Skatīt
 
 # Network client list
 
