--- a/src/lang/lithuanian.txt
+++ b/src/lang/lithuanian.txt
@@ -2337,6 +2337,7 @@ STR_NETWORK_NEED_COMPANY_PASSWORD_CAPTION                       :{WHITE}Kompanij
 
 # Network company list added strings
 STR_NETWORK_COMPANY_LIST_CLIENT_LIST                            :Žaidėjų sąrašas
+STR_NETWORK_COMPANY_LIST_SPECTATE                               :Stebėti
 
 # Network client list
 
