--- a/src/lang/malay.txt
+++ b/src/lang/malay.txt
@@ -1759,6 +1759,7 @@ STR_NETWORK_NEED_COMPANY_PASSWORD_CAPTION                       :{WHITE}Syarikat
 
 # Network company list added strings
 STR_NETWORK_COMPANY_LIST_CLIENT_LIST                            :Senarai klien
+STR_NETWORK_COMPANY_LIST_SPECTATE                               :Saksi
 
 # Network client list
 
