--- a/src/lang/romanian.txt
+++ b/src/lang/romanian.txt
@@ -2039,6 +2039,7 @@ STR_NETWORK_NEED_COMPANY_PASSWORD_CAPTION                       :{WHITE}Companie
 
 # Network company list added strings
 STR_NETWORK_COMPANY_LIST_CLIENT_LIST                            :Lista de clienţi
+STR_NETWORK_COMPANY_LIST_SPECTATE                               :Observă
 
 # Network client list
 
