--- a/src/lang/russian.txt
+++ b/src/lang/russian.txt
@@ -2278,6 +2278,7 @@ STR_NETWORK_NEED_COMPANY_PASSWORD_CAPTION                       :{WHITE}Комп
 
 # Network company list added strings
 STR_NETWORK_COMPANY_LIST_CLIENT_LIST                            :Список клиентов
+STR_NETWORK_COMPANY_LIST_SPECTATE                               :Наблюдать
 
 # Network client list
 STR_NETWORK_CLIENT_LIST_ADMIN_CLIENT_TOOLTIP                    :{BLACK}Действия администратора, применимые к этому клиенту
