--- a/src/lang/slovenian.txt
+++ b/src/lang/slovenian.txt
@@ -2153,6 +2153,7 @@ STR_NETWORK_NEED_COMPANY_PASSWORD_CAPTION                       :{WHITE}Podjetje
 
 # Network company list added strings
 STR_NETWORK_COMPANY_LIST_CLIENT_LIST                            :Seznam gostov
+STR_NETWORK_COMPANY_LIST_SPECTATE                               :Opazuj
 
 # Network client list
 
