--- a/src/lang/spanish_MX.txt
+++ b/src/lang/spanish_MX.txt
@@ -2125,6 +2125,7 @@ STR_NETWORK_NEED_COMPANY_PASSWORD_CAPTION                       :{WHITE}Empresa 
 
 # Network company list added strings
 STR_NETWORK_COMPANY_LIST_CLIENT_LIST                            :Lista de clientes
+STR_NETWORK_COMPANY_LIST_SPECTATE                               :Observar
 
 # Network client list
 
