--- a/src/lang/turkish.txt
+++ b/src/lang/turkish.txt
@@ -2056,6 +2056,7 @@ STR_NETWORK_NEED_COMPANY_PASSWORD_CAPTION                       :{WHITE}Şirket 
 
 # Network company list added strings
 STR_NETWORK_COMPANY_LIST_CLIENT_LIST                            :Oyuncu listesi
+STR_NETWORK_COMPANY_LIST_SPECTATE                               :Gözlemle
 
 # Network client list
 
