--- a/src/lang/welsh.txt
+++ b/src/lang/welsh.txt
@@ -2005,6 +2005,7 @@ STR_NETWORK_NEED_COMPANY_PASSWORD_CAPTION                       :{WHITE}Mae'r cw
 
 # Network company list added strings
 STR_NETWORK_COMPANY_LIST_CLIENT_LIST                            :Rhestr Cleientiaid
+STR_NETWORK_COMPANY_LIST_SPECTATE                               :Gwylio
 
 # Network client list
 
