--- a/src/lang/english.txt
+++ b/src/lang/english.txt
@@ -306,6 +306,7 @@ STR_SORT_BY_LENGTH                                              :Length
 STR_SORT_BY_LIFE_TIME                                           :Remaining lifetime
 STR_SORT_BY_TIMETABLE_DELAY                                     :Timetable delay
 STR_SORT_BY_AVG_ORDER_OCCUPANCY                                 :Average order occupancy
+STR_SORT_BY_MAX_SPEED_LOADED                                    :Maximum speed (fully loaded)
 STR_SORT_BY_FACILITY                                            :Station type
 STR_SORT_BY_WAITING_TOTAL                                       :Total waiting cargo
 STR_SORT_BY_WAITING_AVAILABLE                                   :Available waiting cargo
